@@ -8,10 +8,12 @@ GOGET=$(GOCMD) get
 DIST_DIR=dist
 LINUX_DIR=linux
 MACOS_DIR=macos
-WINDOWS_DIR=windows
+WINDOWS_DIR=windows-x64
+WINDOWS_32BIT_DIR=windows-x32
 DIST_LINUX_DIR=$(NAME)-$(VERSION)-$(LINUX_DIR)
 DIST_MACOS_DIR=$(NAME)-$(VERSION)-$(MACOS_DIR)
 DIST_WINDOWS_DIR=$(NAME)-$(VERSION)-$(WINDOWS_DIR)
+DIST_WINDOWS_32BIT_DIR=$(NAME)-$(VERSION)-$(WINDOWS_32BIT_DIR)
 
 all: test build
 
@@ -28,7 +30,7 @@ test: deps
 clean:
 	@rm -rf $(DIST_DIR)
 
-build: build-linux build-macos build-windows
+build: build-linux build-macos build-windows build-windows-32bit
 
 build-linux:
 	mkdir -p $(DIST_DIR)/$(LINUX_DIR)
@@ -41,6 +43,10 @@ build-macos:
 build-windows:
 	mkdir -p $(DIST_DIR)/$(WINDOWS_DIR)
 	GOOS=windows GOARCH=amd64 CGO_ENABLED=0 $(GOBUILD) -ldflags "-X main.version=$(VERSION)" -o $(DIST_DIR)/$(WINDOWS_DIR)/$(NAME).exe
+
+build-windows-32bit:
+	mkdir -p $(DIST_DIR)/$(WINDOWS_32BIT_DIR)
+	GOOS=windows GOARCH=386 CGO_ENABLED=0 $(GOBUILD) -ldflags "-X main.version=$(VERSION)" -o $(DIST_DIR)/$(WINDOWS_32BIT_DIR)/$(NAME).exe
 
 .PHONY: dist
 dist: deps build
@@ -69,4 +75,13 @@ dist: deps build
 	cp -p ../README.md $(DIST_WINDOWS_DIR)/ && \
 	cp -p ../release-notes.txt $(DIST_WINDOWS_DIR)/ && \
 	zip -r $(DIST_WINDOWS_DIR).zip $(DIST_WINDOWS_DIR) && \
+	cd ..
+
+	cd $(DIST_DIR) && \
+	mv $(WINDOWS_32BIT_DIR) $(DIST_WINDOWS_32BIT_DIR) && \
+	cp -p ../LICENSE.txt $(DIST_WINDOWS_32BIT_DIR)/ && \
+	cp -p ../NOTICE.txt $(DIST_WINDOWS_32BIT_DIR)/ && \
+	cp -p ../README.md $(DIST_WINDOWS_32BIT_DIR)/ && \
+	cp -p ../release-notes.txt $(DIST_WINDOWS_32BIT_DIR)/ && \
+	zip -r $(DIST_WINDOWS_32BIT_DIR).zip $(DIST_WINDOWS_32BIT_DIR) && \
 	cd ..
